[metadata]
name = BezoarIbex
version = 0.0.1
author = Özgür Deniz Akyol
author_email = dakyol@pm.me
description = A python module for creating mathematical models of physical concepts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dakyol/BezoarIbex
project_urls =
    Bug Tracker = https://github.com/dakyol/BezoarIbex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src